--- a/params.ini
+++ b/params.ini
@@ -26,8 +26,8 @@ cmb_dataset4 = data/B03_NA_21July05.newdat
 
 #filenames for matter power spectrum datasets, incl twodf
 mpk_numdatasets = 1
-mpk_dataset1 = data/2df_2005.dataset
-#mpk_dataset1 = data/sdss.dataset
+mpk_dataset1 = data/sdss_lrgDR4.dataset
+#mpk_dataset1 = data/2df_2005.dataset
 
 #if true, use HALOFIT for non-linear corrections (astro-ph/0207664).
 #note lyman-alpha (lya) code assumes linear spectrum
@@ -171,7 +171,7 @@ param6 = 0 0 0 0 0
 param7 = -1 -1 -1 0 0
 
 #n_s
-param8 = 0.95 0.5 1.5 0.03 0.01
+param8 = 0.95 0.5 1.5 0.02 0.01
 #n_t
 param9 = 0 0 0 0 0
 #n_run
