--- a/distparams.ini
+++ b/distparams.ini
@@ -4,6 +4,8 @@
 columnnum = 22
 file_root = chains/test
 out_root = 
+out_dir = 
+plot_data_dir = plot_data/
 
 #If generated chain at higher temperature can cool for computing results
 cool = 1
