--- a/params.ini
+++ b/params.ini
@@ -15,12 +15,16 @@ feedback = 1
 #Temperature at which to Monte-Carlo
 temperature = 1
 
-#filenames for CMB datasets
+#filenames for CMB datasets and SZ templates (added to C_l times parameter(13))
 #Note you may need to change lmax in cmbtypes.f90 to use small scales (e.g. lmax=2100)
 cmb_numdatasets = 1
 cmb_dataset1 = WMAP
+cmb_dataset_SZ1 = data/WMAP_SZ_VBand.dat
 
 cmb_dataset2 = data/acbar2007_l2000.newdat
+cmb_dataset_SZ2 = data/WMAP_SZ_VBand.dat
+cmb_dataset_SZ_scale2 = 0.28
+
 cmb_dataset3 = data/CBIpol_2.0_final.newdat
 cmb_dataset4 = data/B03_NA_21July05.newdat
 
@@ -134,7 +138,7 @@ pivot_k = 0.05
 inflation_consistency = F
 
 #Whether the CMB should be lensed (slows a lot unless also computing matter power)
-CMB_lensing = F
+CMB_lensing = T
 #increase accuracy_level to run CAMB on higher accuracy
 #(default is about 0.3%, accuracy_level=2 around 0.1% at high l)
 accuracy_level = 1
@@ -181,6 +185,5 @@ param10 = 0 0 0 0 0
 param11 = 3 2.7 4 0.01 0.01
 #amp_ratio
 param12 = 0 0 0 0 0
-#unused fast parameter
-param13 = 0 0 0 0 0
-
+#SZ amplitude, as in WMAP analysis
+param13 = 1 0 2 0.4 0.4
