--- a/distparams.ini
+++ b/distparams.ini
@@ -107,11 +107,13 @@ lab8 = n_s
 #n_t
 lab9 =  
 lab10 = n_{run}
+#markerx adds vertical line to MatLab 1D plot
+#marker10 = 0
 
 lab11 = log[10^{10} A_s]
 #amp ratio
 lab12 = r
-lab13 =  
+lab13 =  A_{SZ}
 
 lab14 = \Omega_\Lambda
 lab15 = Age/GYr
@@ -127,6 +129,8 @@ limits4 = 0.01 N
 limits6 = 0 N
 limits7 = -1 N
 limits12 = 0 N
+limits13 = 0 2
+
 #all_limits sets all limitsxx for all variables to the same; can be useful for bins
 all_limits = 
 
