--- a/1col_distparams.ini
+++ b/1col_distparams.ini
@@ -1,28 +1,33 @@
+#example WMAP 5-year chains input file
+#see http://lambda.gsfc.nasa.gov/product/map/dr3/parameters.cfm
+#note z_re defined differently from latest CosmoMC
+
 #Params for "getdist" - for processing .txt chain information
 
-#if zero, columnnum calculated automatically as total number of columns
-columnnum = 22
-file_root = chains/test
+single_column_chain_files = T
+nparams = 13
+file_root = WMAP5/chain
 out_root = 
+plot_data_dir = 
 out_dir = 
-plot_data_dir = plot_data/
+
 
 #If generated chain at higher temperature can cool for computing results
 cool = 1
 
-#If 0 assume 1 and no chain filename prefixes
-chain_num = 6
+#If 0 assume 1 and no chain filename prefixe
+chain_num = 1
 first_chain = 
 exclude_chain = 
 
-#width of Gaussian smoothing - Should check plots are robust to changes in 
+#width of Gaussian smoothing - Should ccheck plots are robust to changes in 
 #this parameter. Narrow diagonal distributions need larger number
 #Can also check plots by comparing with setting smoothing=F below
 num_bins = 20
 
 #For disgarding burn-in if using raw chains
 #if < 1 interpreted as a fraction of the total number of rows (0.3 ignores first 30% of lines)
-ignore_rows = 0.5
+ignore_rows = 0.
 
 #if T produced B&W printer friendly output
 B&W = F
@@ -47,7 +52,7 @@ shade_meanlikes = T
 thin_factor = 0
 #Do probabilistic importance sampling to single samples
 make_single_samples = F
-single_thin = 4
+single_thin = 1
 
 #Do simple importance sampling
 adjust_priors = F
@@ -61,8 +66,6 @@ smoothing = T
 num_contours = 2
 contour1 = 0.68
 contour2 = 0.95
-
-do_minimal_1d_intervals = F
 
 #if we only want 2D plots agains a particular variable
 plot_2D_param = 0
@@ -85,7 +88,7 @@ triangle_plot = T
 #Number of parameters to get covariance matrix for 
 #If you are going to use the output as a proposal density make sure
 #you have map_params = F, and the dimension equal to the number of MCMC parameters
-cov_matrix_dimension = 13
+cov_matrix_dimension = 0
 
 #e.g. colormap('jet')
 matlab_colscheme =
@@ -94,58 +97,52 @@ matlab_colscheme =
 plotparams_num = 0
 plotparams = 1 2 3 11
 
+
+pname1 = omegabh2
+pname2 = omegach2
+pname3 = omegal
+pname4 = tau
+pname5 = ns002
+pname6 = a002
+pname7 = asz
+pname8 = sigma8
+pname9 = zrei
+pname10 = age
+pname11 = c220
+pname12 = trec
+pname13 = zrec
+
 #labels for the parameters
 lab1 = \Omega_b h^2
 lab2 = \Omega_c h^2
-lab3 = \theta
+lab3 =  \Omega_\Lambda
 lab4 = \tau
-#Omk
-lab5 =
-#nufrac 
-lab6 = 
-#w
-lab7 = 
-
-lab8 = n_s
-#n_t
-lab9 =  
-lab10 = n_{run}
-#markerx adds vertical line to MatLab 1D plot
-#marker10 = 0
-
-lab11 = log[10^{10} A_s]
-#amp ratio
-lab12 = r
-lab13 =  A_{SZ}
-
-lab14 = \Omega_\Lambda
-lab15 = Age/GYr
-lab16 = \Omega_m
-lab17 = \sigma_8
-lab18 = z_{re}
-#r_{10}
-lab19 = 
-lab20 = H_0
+lab5 = n_s
+lab6 = 10^9 A_s 
+lab7 = A_{\rm SZ}
+lab8 = \sigma_8
+lab9 = z_{\rm re}
+lab10 = age 
+lab11 = C_{220}
+lab12 = t_{rec}
+lab13= z_{rec}
 
 #Need to give limits if prior cuts off distribution where not very small
-limits4 = 0.01 N
-limits6 = 0 N
-limits7 = -1 N
-limits12 = 0 N
-limits13 = 0 2
-
 #all_limits sets all limitsxx for all variables to the same; can be useful for bins
+#limits4 = 0 N
+limits7 = 0 2
 all_limits = 
 
 #compute two-tail marginalized limits irrespective of limits settings above
 #(otherwise limits are two-tail only for those parameters without limits)
 force_twotail = F
 
+
 #PCA - analysis output in file file_root.PCA
 #number of parameter to do PCA for
-PCA_num = 0
-PCA_normparam = 13
+PCA_num = 3
+PCA_normparam = 16
 #The parameters to use
-PCA_params = 3 13 16
+PCA_params = 16 20 17
 #L for log(x), M for log(-x), N for no log
 PCA_func   = LLLL
