--- a/params.ini
+++ b/params.ini
@@ -20,6 +20,7 @@ temperature = 1
 cmb_numdatasets = 1
 cmb_dataset1 = WMAP
 cmb_dataset_SZ1 = data/WMAP_SZ_VBand.dat
+cmb_dataset_SZ_scale1 = 1
 
 cmb_dataset2 = data/acbar2007_l2000.newdat
 cmb_dataset_SZ2 = data/WMAP_SZ_VBand.dat
