bbn_consistency in .ini

--- a/params.ini
+++ b/params.ini
@@ -137,7 +137,6 @@ rand_seed =
 #With checkpoint=T note you must delete all chains/file_root.* files if you want new chains with an old file_root
 checkpoint = F
 
-
 #CAMB parameters
 #If we are including tensors
 compute_tensors = F
@@ -145,6 +144,9 @@ compute_tensors = F
 pivot_k = 0.05
 #If using tensors, enforce n_T = -A_T/(8A_s)
 inflation_consistency = F
+
+#Set Y_He from BBN constraint; if false set to fixed value of 0.24 by default.
+bbn_consistency=T 
 
 #Whether the CMB should be lensed (slows a lot unless also computing matter power)
 CMB_lensing = T
