use CAMB July 2011

--- a/params.ini
+++ b/params.ini
@@ -137,6 +137,9 @@ rand_seed =
 #With checkpoint=T note you must delete all chains/file_root.* files if you want new chains with an old file_root
 checkpoint = F
 
+#file used by CAMB
+highL_unlensed_cl_template = ./camb/HighLExtrapTemplate_lenspotentialCls.dat
+
 #CAMB parameters
 #If we are including tensors
 compute_tensors = F
@@ -150,8 +153,10 @@ bbn_consistency=T
 
 #Whether the CMB should be lensed (slows a lot unless also computing matter power)
 CMB_lensing = T
+high_accuracy_default = F
 #increase accuracy_level to run CAMB on higher accuracy
-#(default is about 0.3%, accuracy_level=2 around 0.1% at high l)
+#(default is about 0.3%, 0.1% if high_accuracy_default =T)
+#accuracy_level can be increased to check stability/higher accuracy, but inefficient
 accuracy_level = 1
 
 #If action = 1
