--- a/camb/params.ini
+++ b/camb/params.ini
@@ -11,19 +11,18 @@ get_transfer   = F
 
 #if do_lensing then scalar_output_file contains additional columns of l^4 C_l^{pp} and l^3 C_l^{pT}
 #where p is the projected potential. Output lensed CMB Cls (without tensors) are in lensed_output_file below.
-do_lensing     = F
+do_lensing     = T
 
 # 0: linear, 1: non-linear matter power (HALOFIT), 2: non-linear CMB lensing (HALOFIT)
 do_nonlinear = 0
 
 #Maximum multipole and k*eta. 
 #  Note that C_ls near l_max are inaccurate (about 5%), go to 50 more than you need
-#  Lensed power spectra are computed to l_max_scalar-250 where accurate at %-level
-#  For high accuracy lensed spectra set l_max_scalar = (l you need) + 500
+#  Lensed power spectra are computed to l_max_scalar-100 
 #  To get accurate lensed BB need to have l_max_scalar>2000, k_eta_max_scalar > 10000
-#  Otherwise k_eta_max_scalar=2*l_max_scalar usually suffices
-l_max_scalar      = 2000
-k_eta_max_scalar  = 4000
+#  Otherwise k_eta_max_scalar=2*l_max_scalar usually suffices, or don't set to use default
+l_max_scalar      = 2200
+#k_eta_max_scalar  = 4000
 
 #  Tensor settings should be less than or equal to the above
 l_max_tensor      = 1500
@@ -48,9 +47,12 @@ cs2_lam        = 1
 #omega_lambda   = 0.7
 #omega_neutrino = 0
 
-#massless_neutrinos is the effective number (for QED + non-instantaneous decoupling)
 temp_cmb           = 2.725
 helium_fraction    = 0.24
+# massless_neutrinos is the effective number (for QED + non-instantaneous decoupling)
+# fractional part of the number is used to increase the neutrino temperature, e.g.
+# 2.99 correponds to 2 neutrinos with a much higher temperature, 3.04 correponds to
+# 3 neutrinos with a slightly higher temperature
 massless_neutrinos = 3.04
 massive_neutrinos  = 0
 
@@ -162,7 +164,7 @@ bispectrum_fisher_noise_pol=0
 bispectrum_fisher_fwhm_arcmin=7
 #Filename if you want to write full reduced bispectrum (at sampled values of l_1)
 bispectrum_full_output_file=
-
+bispectrum_full_output_sparse=F
 
 ##Optional parameters to control the computation speed,accuracy and feedback
 
@@ -176,9 +178,7 @@ accurate_BB = F
 
 #massive_nu_approx: 0 - integrate distribution function
 #                   1 - switch to series in velocity weight once non-relativistic
-#                   2 - use fast approximate scheme (CMB only- accurate for light neutrinos)
-#                   3 - intelligently use the best accurate method
-massive_nu_approx = 3
+massive_nu_approx = 1
 
 #Whether you are bothered about polarization. 
 accurate_polarization   = T
@@ -187,7 +187,7 @@ accurate_polarization   = T
 accurate_reionization   = T
 
 #whether or not to include neutrinos in the tensor evolution equations
-do_tensor_neutrinos     = F
+do_tensor_neutrinos     = T
 
 #Whether to turn off small-scale late time radiation hierarchies (save time,v. accurate)
 do_late_rad_truncation   = T
@@ -196,8 +196,13 @@ do_late_rad_truncation   = T
 #if number_of_threads=0 assigned automatically
 number_of_threads       = 0
 
-#Default scalar accuracy is about 0.3% (except lensed BB). 
-#For 0.1%-level try accuracy_boost=2, l_accuracy_boost=2.
+#Default scalar accuracy is about 0.3% (except lensed BB) if high_accuracy_default=F
+#If high_accuracy_default=T the default taget accuracy is 0.1% at L>600 (with boost parameter=1 below)
+#Try accuracy_boost=2, l_accuracy_boost=2 if you want to check stability/even higher accuracy
+#Note increasing accuracy_boost parameters is very inefficient if you want higher accuracy,
+#but high_accuracy_default is efficient 
+
+high_accuracy_default=F
 
 #Increase accuracy_boost to decrease time steps, use more k values,  etc.
 #Decrease to speed up at cost of worse accuracy. Suggest 0.8 to 3.
