CAMB tweaks, CAMB global_error_flag, Makefile

--- a/params.ini
+++ b/params.ini
@@ -137,6 +137,9 @@ rand_seed =
 #With checkpoint=T note you must delete all chains/file_root.* files if you want new chains with an old file_root
 checkpoint = F
 
+#whether to stop on CAMB error, or continue ignoring point
+stop_on_error=  T
+
 #file used by CAMB
 highL_unlensed_cl_template = ./camb/HighLExtrapTemplate_lenspotentialCls.dat
 
