BAO changes from Jason Dosset (with minor changes)

--- a/params.ini
+++ b/params.ini
@@ -38,6 +38,11 @@ mpk_dataset1 = data/lrgDR7kmax02kmin02newmaxLv2ALL_MAGCOVv3.dataset
 #filename for supernovae (default SDSS compilation)
 SN_filename = data/supernovae.dataset
 
+#filenames for BAO data sets
+bao_numdatasets = 2
+bao_dataset1 = data/wigglez_bao.dataset
+bao_dataset2 = data/sdss_bao.dataset
+
 #if true, use HALOFIT for non-linear corrections (astro-ph/0207664).
 #note lyman-alpha (lya) code assumes linear spectrum
 nonlinear_pk = F
