Revert "SNLS3 supernovae; fix for mpk=F with sigma8"
This reverts commit b1ad2b561caf25404620e25d415f54591329d954.

--- a/params.ini
+++ b/params.ini
@@ -35,8 +35,8 @@ mpk_dataset1 = data/lrgDR7kmax02kmin02newmaxLv2ALL_MAGCOVv3.dataset
 #mpk_dataset1 = data/sdss_lrgDR4.dataset
 #mpk_dataset1 = data/2df_2005.dataset
 
-#filename for supernovae (no longer needed)
-#SN_filename = data/supernovae.dataset
+#filename for supernovae (default SDSS compilation)
+SN_filename = data/supernovae.dataset
 
 #filenames for BAO data sets
 bao_numdatasets = 2
