fixed paramnames output when post processing

--- a/camb/params.ini
+++ b/camb/params.ini
@@ -52,8 +52,8 @@ helium_fraction    = 0.24
 # massless_neutrinos is the effective number (for QED + non-instantaneous decoupling)
 # fractional part of the number is used to increase the neutrino temperature, e.g.
 # 2.99 correponds to 2 neutrinos with a much higher temperature, 3.04 correponds to
-# 3 neutrinos with a slightly higher temperature
-massless_neutrinos = 3.04
+# 3 neutrinos with a slightly higher temperature. 3.046 is consistent with CosmoMC.
+massless_neutrinos = 3.046
 massive_neutrinos  = 0
 
 #Neutrino mass splittings
