--- a/distparams.ini
+++ b/distparams.ini
@@ -36,6 +36,9 @@ B&W = F
 #version of MatLab you are using
 matlab_version = 7
 
+#To make e.g. 1D plots automatically uncomment this
+#finish_run_command= matlab < %ROOTNAME%.m
+
 #Switches; auto_label labels all parameters by their number
 no_plots = F
 no_tests = F
