--- a/params.ini
+++ b/params.ini
@@ -152,6 +152,7 @@ highL_unlensed_cl_template = ./camb/HighLExtrapTemplate_lenspotentialCls.dat
 #If we are including tensors
 compute_tensors = F
 #Initial power spectrum amplitude point (Mpc^{-1})
+#Note if you change this, may need new .covmat as degeneracy directions change
 pivot_k = 0.05
 #If using tensors, enforce n_T = -A_T/(8A_s)
 inflation_consistency = F
