New params.ini file that points at WiggleZ data

--- a/params.ini
+++ b/params.ini
@@ -35,6 +35,13 @@ mpk_dataset1 = data/lrgDR7kmax02kmin02newmaxLv2ALL_MAGCOVv3.dataset
 #mpk_dataset1 = data/sdss_lrgDR4.dataset
 #mpk_dataset1 = data/2df_2005.dataset
 
+#filenames for WiggleZ data only
+mpk_wigglez_numdatasets = 4
+wmpk_dataset1 = data/wigglez_nov11a.dataset
+wmpk_dataset2 = data/wigglez_nov11b.dataset
+wmpk_dataset3 = data/wigglez_nov11c.dataset
+wmpk_dataset4 = data/wigglez_nov11d.dataset
+
 #filename for supernovae (default SDSS compilation)
 SN_filename = data/supernovae.dataset
 
