minor CAMB fixes etc

--- a/params.ini
+++ b/params.ini
@@ -96,7 +96,7 @@ oversample_fast = 1
 #if non-zero number of steps between sample info dumped to file file_root.data
 indep_sample = 0
 
-#number of samples to disgard at start; usually set to zero and remove later
+#number of samples to discard at start; usually set to zero and remove later
 burn_in = 0
 
 #If zero set automatically
@@ -122,7 +122,7 @@ MPI_Limit_Converge_Err = 0.2
 #which parameter's tails to check. If zero, check all parameters:
 MPI_Limit_Param = 0
 
-#if MPI_LearnPropose = T, the proposal density is continally updated from the covariance of samples so far (since burn in)
+#if MPI_LearnPropose = T, the proposal density is continually updated from the covariance of samples so far (since burn in)
 MPI_LearnPropose = T
 #can set a value of converge at which to stop updating covariance (so that it becomes rigorously Markovian)
 #e.g. MPI_R_StopProposeUpdate = 0.4 will stop updating when (variance of chain means)/(mean of variances) < 0.4
