CAMB supports wa via basic ppf

--- a/camb/params.ini
+++ b/camb/params.ini
@@ -36,8 +36,13 @@ omch2          = 0.112
 omnuh2         = 0
 omk            = 0
 hubble         = 70
-#effective equation of state parameter for dark energy, assumed constant
+
+use_tabulated_w = F
+#effective equation of state parameter for ppf dark energy w=w0, and wa for variation
 w              = -1
+wa             = 0
+#if use_tabulated_w read (a,w) from the following user-supplied file instead of above
+wafile = wa.dat
 #constant comoving sound speed of the dark energy (1=quintessence)
 cs2_lam        = 1
 
@@ -204,7 +209,7 @@ number_of_threads       = 0
 #Note increasing accuracy_boost parameters is very inefficient if you want higher accuracy,
 #but high_accuracy_default is efficient 
 
-high_accuracy_default=F
+high_accuracy_default=T
 
 #Increase accuracy_boost to decrease time steps, use more k values,  etc.
 #Decrease to speed up at cost of worse accuracy. Suggest 0.8 to 3.
@@ -218,3 +223,4 @@ l_accuracy_boost        = 1
 #interpolation errors may be up to 3%
 #Decrease to speed up non-flat models a bit
 l_sample_boost          = 1
+
