--- a/params.ini
+++ b/params.ini
@@ -183,21 +183,25 @@ redo_from_text = F
 redo_likeoffset =  0
 
 #parameter start center, min, max, start width, st. dev. estimate
-param[omegabh2] = 0.0223 0.005 0.1 0.001 0.001
-param[omegadmh2] = 0.105 0.01 0.99 0.01 0.01
-param[theta] = 1.04 0.5 10 0.002 0.002
-param[tau] = 0.09 0.01 0.8 0.03 0.03
+param[omegabh2] = 0.0221 0.005 0.1 0.0003 0.0003
+param[omegadmh2] = 0.115 0.001 0.99 0.003 0.003
+param[theta] = 1.036 0.5 10 0.001 0.001
+param[tau] = 0.09 0.01 0.8 0.02 0.02
 
 param[omegak] = 0 0 0 0 0
 param[fnu] = 0 0 0 0 0
 param[w] = -1 -1 -1 0 0
+param[wa] = 0 0 0 0 0
+param[nnu] = 3.046 3.046 3.046 0 0
+param[YHe] = 0.24 0.24 0.24 0 0
+param[alphaCDM] = 0 0 0 0 0
 
-param[ns] = 0.95 0.5 1.5 0.02 0.01
+param[ns] = 0.96 0.9 1.1 0.01 0.005
 param[nt] = 0 0 0 0 0
 param[nrun] = 0 0 0 0 0
 
 #log[10^10 A_s]
-param[logA] = 3 2.7 4 0.01 0.01
+param[logA] = 3.108 2.7 4 0.001 0.001
 param[r] = 0 0 0 0 0
 #SZ amplitude, as in WMAP analysis
 param[asz]= 1 0 2 0.4 0.4
