ALens, more derived params

--- a/params.ini
+++ b/params.ini
@@ -193,9 +193,10 @@ param[fnu] = 0 0 0 0 0
 param[w] = -1 -1 -1 0 0
 param[wa] = 0 0 0 0 0
 param[nnu] = 3.046 3.046 3.046 0 0
-param[YHe] = 0.24 0.24 0.24 0 0
-param[alphaCDM] = 0 0 0 0 0
-param[deltazre] = 0.5 0.5 0.5 0 0
+param[yhe] = 0.24 0.24 0.24 0 0
+param[alpha1] = 0 0 0 0 0
+param[deltazrei] = 0.5 0.5 0.5 0 0
+param[Alens] = 1 1 1 0 0
 
 param[ns] = 0.96 0.9 1.1 0.01 0.005
 param[nt] = 0 0 0 0 0
