added baseline and shared .ini and batch files

--- a/params.ini
+++ b/params.ini
@@ -130,9 +130,9 @@ MPI_R_StopProposeUpdate = 0
 
 #If have covmat, R to reach before updating proposal density (increase if covmat likely to be poor)
 #Only used if not varying new parameters that are fixed in covmat
-MPI_Max_R_ProposeUpdate = 2
+MPI_Max_R_ProposeUpdate = 3
 #As above, but used if varying new parameters that were fixed in covmat
-MPI_Max_R_ProposeUpdateNew = 30
+MPI_Max_R_ProposeUpdateNew = 50
 
 #if blank this is set from system clock
 rand_seed = 
@@ -162,7 +162,7 @@ bbn_consistency=T
 
 #Whether the CMB should be lensed (slows a lot unless also computing matter power)
 CMB_lensing = T
-high_accuracy_default = F
+high_accuracy_default = T
 #increase accuracy_level to run CAMB on higher accuracy
 #(default is about 0.3%, 0.1% if high_accuracy_default =T)
 #accuracy_level can be increased to check stability/higher accuracy, but inefficient
