.ini updates for planck

--- a/batch1/common_batch1.ini
+++ b/batch1/common_batch1.ini
@@ -38,14 +38,17 @@ get_sigma8 = F
 #If using tensors, enforce n_T = -A_T/(8A_s)
 inflation_consistency = T
 
-param[omegabh2] = 0.0221 0.005 0.1 0.0003 0.0003
-param[omegadmh2] = 0.115 0.001 0.99 0.003 0.003
-param[theta] = 1.036 0.5 10 0.001 0.001
-param[tau] = 0.09 0.01 0.8 0.02 0.02
+#Set Y_He from BBN constraint; if false set to fixed value of 0.24 by default.
+bbn_consistency=T 
 
-param[ns] = 0.96 0.9 1.1 0.01 0.005
+param[omegabh2] = 0.0222 0.005 0.1 0.0003 0.0002
+param[omegadmh2] = 0.12 0.001 0.99 0.003 0.002
+param[theta] = 1.0414 0.5 10 0.001 0.0004
+param[tau] = 0.09 0.01 0.8 0.02 0.01
+
+param[ns] = 0.96 0.9 1.1 0.005 0.004
 #log[10^10 A_s]
-param[logA] = 3.108 2.7 4 0.001 0.001
+param[logA] = 3.1096 2.7 4 0.001 0.001
 
 #SZ amplitude, as in WMAP analysis
 param[asz]= 0 0 0 0 0
@@ -70,7 +73,8 @@ propose_scale = 2.4
 oversample_fast = 1
 
 #if non-zero number of steps between sample info dumped to file file_root.data
-indep_sample = 0
+#WANT THIS ON so we can do importance sampling runs quickly later for likelihood updates
+indep_sample = 10
 
 #number of samples to disgard at start; usually set to zero and remove later
 burn_in = 0
@@ -116,8 +120,6 @@ pivot_k = 0.05
 
 #Whether the CMB should be lensed (slows a lot unless also computing matter power)
 CMB_lensing = T
-#increase accuracy_level to run CAMB on higher accuracy
-#(default is about 0.3%, accuracy_level=2 around 0.1% at high l)
 accuracy_level = 1
 
 high_accuracy_default = T
@@ -154,6 +156,9 @@ rand_seed =
 #and chains continued from where they stopped
 #With checkpoint=T note you must delete all chains/file_root.* files if you want new chains with an old file_root
 checkpoint = F
+
+#whether to stop on CAMB error, or continue ignoring point
+stop_on_error=  T
 
 #If action = 1
 redo_likelihoods = T
