--- a/common_params.ini
+++ b/common_params.ini
@@ -17,7 +17,7 @@ propose_scale = 2.4
 oversample_fast = 1
 
 #if non-zero number of steps between sample info dumped to file file_root.data
-indep_sample = 0
+indep_sample = 10
 
 #number of samples to disgard at start; usually set to zero and remove later
 burn_in = 0
@@ -101,6 +101,10 @@ rand_seed =
 #and chains continued from where they stopped
 #With checkpoint=T note you must delete all chains/file_root.* files if you want new chains with an old file_root
 checkpoint = F
+
+
+#whether to stop on CAMB error, or continue ignoring point
+stop_on_error=  T
 
 #If action = 1
 redo_likelihoods = T
