added nnu and r covmats

--- a/distparams.ini
+++ b/distparams.ini
@@ -112,6 +112,8 @@ limits[tau] = 0.01 N
 limits[fnu] = 0 N
 limits[w] = -1 N
 limits[r]= 0 N
+limits[r02]= 0 N
+limits[r10]= 0 N
 limits[asz] = 0 2
 
 #all_limits sets all limitsxx for all variables to the same; can be useful for bins
