--- a/distparams_planck.ini
+++ b/distparams_planck.ini
@@ -97,10 +97,13 @@ plotparams = omegabh2 omegadmh2 tau ns
 marker[nrun] = 0
 
 #Need to give limits if prior cuts off distribution where not very small
-limits[tau] = 0.01 N
+#limits[tau] = 0.01 N
 limits[fnu] = 0 N
 limits[w] = -1 N
 limits[r]= 0 N
+limits[r02]= 0 N
+limits[r10]= 0 N
+
 limits[asz] = 0 2
 
 #all_limits sets all limitsxx for all variables to the same; can be useful for bins
