default limits, new covmats

--- a/distparams_planck.ini
+++ b/distparams_planck.ini
@@ -103,6 +103,8 @@ limits[w] = -1 N
 limits[r]= 0 N
 limits[r02]= 0 N
 limits[r10]= 0 N
+limits[mnu]= 0 N
+limits[omeganuh2]= 0 N
 
 limits[asz] = 0 2
 
