--- a/distparams.ini
+++ b/distparams.ini
@@ -114,6 +114,8 @@ limits[w] = -1 N
 limits[r]= 0 N
 limits[r02]= 0 N
 limits[r10]= 0 N
+limits[mnu]= 0 N
+limits[omeganuh2]= 0 N
 limits[asz] = 0 2
 
 #all_limits sets all limitsxx for all variables to the same; can be useful for bins
