--- a/camb/Makefile_main
+++ b/camb/Makefile_main
@@ -62,15 +62,9 @@ camb_fits: writefits.f90 $(CAMBOBJ) $(DRIVER)
 %.o: %.f90
 	$(F90C) $(F90FLAGS) -c $*.f90
 
-utils.o:
-	$(F90C) $(F90FLAGS) -c utils.F90	
+%.o: %.F90
+    $(F90C) $(F90FLAGS) -c $*.F90
 
-$(BISPECTRUM).o: $(BISPECTRUM).F90
-	$(F90C) $(F90FLAGS) -c $(BISPECTRUM).F90	
-
-
-Matrix_utils.o:
-	$(F90C) $(F90FLAGS) -c Matrix_utils.F90	
 
 clean:
 	-rm -f *.o *.a *.d core *.mod
