--- a/params.ini
+++ b/params.ini
@@ -197,6 +197,7 @@ param[yhe] = 0.24 0.24 0.24 0 0
 param[alpha1] = 0 0 0 0 0
 param[deltazrei] = 0.5 0.5 0.5 0 0
 param[Alens] = 1 1 1 0 0
+param[fdm] = 0 0 0 0 0
 
 param[ns] = 0.96 0.9 1.1 0.01 0.005
 param[nt] = 0 0 0 0 0
