--- a/params_planck.ini
+++ b/params_planck.ini
@@ -85,3 +85,4 @@ param[yhe] = 0.24 0.24 0.24 0 0
 param[alpha1] = 0 0 0 0 0
 param[deltazrei] = 0.5 0.5 0.5 0 0
 param[Alens] = 1 1 1 0 0
+param[fdm] = 0 0 0 0 0
