--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -99,6 +99,12 @@ limits[fnu] = 0 N
 limits[w] = -1 N
 limits[r]= 0 N
 limits[asz] = 0 2
+limits[r02]= 0 N
+limits[r10]= 0 N
+limits[mnu]= 0 N
+limits[omeganuh2]= 0 N
+limits[fdm]= 0 N
+
 
 #all_limits sets all limitsxx for all variables to the same; can be useful for bins
 all_limits = 
